@@ -27,7 +27,7 @@ namespace Pds_ConfigDb {
   public:
     enum ConfigType { FrameFex, Opal1k, TM6740, Evr, EvrIO, 
                       //		      Sequencer,
-                      Acq, 
+                      AcqADC, AcqTDC,
 		      Ipimb, IpmDiode, PimDiode, PimImage, 
 		      Encoder, pnCCD, RunControl, Princeton, Fccd, Cspad, NumberOf };
 
