@@ -19,7 +19,6 @@ void Serializer::initialize(QWidget* parent, QBoxLayout* layout)
 
 void Serializer::flush ()
 {
-
   Parameter* p = pList.forward();
   while( p != pList.empty() ) {
     p->flush();
