@@ -11,7 +11,9 @@
 #include "pds/service/Task.hh"
 #include "pds/client/Fsm.hh"
 #include "pds/client/Action.hh"
-#include "pds/acqiris/AcqManager.hh"
+#include "pds/config/AcqDataType.hh"
+#include "pds/acqiris/AcqD1Manager.hh"
+#include "pds/acqiris/AcqT3Manager.hh"
 #include "pds/acqiris/AcqFinder.hh"
 #include "pds/acqiris/AcqServer.hh"
 #include "pds/config/CfgClientNfs.hh"
@@ -21,6 +23,8 @@
 #include <stdlib.h>
 #include <stdio.h>
 
+#include <list>
+
 namespace Pds {
 
   //
@@ -29,17 +33,22 @@ namespace Pds {
   //
   class MySegWire : public SegWireSettings {
   public:
-    MySegWire(AcqServer& acqServer) : _acqServer(acqServer) { _sources.push_back(acqServer.client()); }
+    MySegWire(std::list<AcqServer*>& servers) : _servers(servers) 
+    {
+      for(std::list<AcqServer*>::iterator it=servers.begin(); it!=servers.end(); it++)
+	_sources.push_back((*it)->client()); 
+    }
     virtual ~MySegWire() {}
     void connect (InletWire& wire,
 		  StreamParams::StreamType s,
 		  int interface) {
-      wire.add_input(&_acqServer);
+      for(std::list<AcqServer*>::iterator it=_servers.begin(); it!=_servers.end(); it++)
+	wire.add_input(*it);
     }
     const std::list<Src>& sources() const { return _sources; }
   private:
-    AcqServer& _acqServer;
-    std::list<Src> _sources;
+    std::list<AcqServer*>& _servers;
+    std::list<Src>         _sources;
   };
 
   //
@@ -48,16 +57,16 @@ namespace Pds {
   //
   class Seg : public EventCallback {
   public:
-    Seg(Task*                 task,
-        unsigned              platform,
-	CfgClientNfs&         cfgService,
-        SegWireSettings&      settings,
-        Arp*                  arp,
-        AcqServer&            acqServer) :
-      _task(task),
-      _platform(platform),
-      _cfg   (cfgService),
-      _acqServer(acqServer)
+    Seg(Task*                     task,
+        unsigned                  platform,
+        SegWireSettings&          settings,
+        Arp*                      arp,
+        std::list<AcqD1Manager*>& D1Managers,
+	std::list<AcqT3Manager*>& T3Managers) :
+      _task      (task),
+      _platform  (platform),
+      _d1managers(D1Managers),
+      _t3managers(T3Managers)
     {
     }
 
@@ -70,22 +79,13 @@ namespace Pds {
     // Implements EventCallback
     void attached(SetOfStreams& streams)
     {
-      printf("Seg connected to platform 0x%x\n", 
-	     _platform);
+      printf("Seg connected to platform 0x%x\n",_platform);
       
       Stream* frmk = streams.stream(StreamParams::FrameWork);
-      AcqFinder acqFinder;
-      unsigned numinstruments=0;
-      if ((numinstruments = acqFinder.numInstruments())>0) {
-        printf("Found %d acqiris instruments\n",numinstruments);
-        AcqManager* acqmgr[10];
-        for (unsigned i=0;i<numinstruments;i++) {
-          acqmgr[i] = new AcqManager(acqFinder.id(i),_acqServer,_cfg);
-          acqmgr[i]->appliance().connect(frmk->inlet());
-        }
-      } else {
-        printf("Error: found %d acqiris instruments\n",(int)acqFinder.numInstruments());
-      }
+      for(std::list<AcqD1Manager*>::iterator it=_d1managers.begin(); it!=_d1managers.end(); it++)
+	(*it)->appliance().connect(frmk->inlet());
+      for(std::list<AcqT3Manager*>::iterator it=_t3managers.begin(); it!=_t3managers.end(); it++)
+	(*it)->appliance().connect(frmk->inlet());
     }
     void failed(Reason reason)
     {
@@ -113,42 +113,46 @@ namespace Pds {
     }
     
   private:
-    Task*         _task;
-    unsigned      _platform;
-    CfgClientNfs& _cfg;
-    AcqServer&    _acqServer;
+    Task*                     _task;
+    unsigned                  _platform;
+    std::list<AcqD1Manager*>& _d1managers;
+    std::list<AcqT3Manager*>& _t3managers;
   };
 }
 
 using namespace Pds;
 
-static void calibrate() {
-  AcqFinder acqFinder;
-  unsigned numinstruments=0;
-  if ((numinstruments = acqFinder.numInstruments())>0) {
-    printf("Found %d acqiris instruments\n",numinstruments);
-    for (unsigned i=0;i<numinstruments;i++) {
-      printf("Calibrating...\n");
-      ViStatus status = AcqrsD1_calibrate(acqFinder.id(i));
-      if(status != VI_SUCCESS) {
-        char message[256];
-        AcqrsD1_errorMessage(acqFinder.id(i),status,message);
-        printf("Acqiris calibration error: %s\n",message);
-      } else {
-        printf("Acqiris calibration successful.\n");
-        status = Acqrs_calSave(acqFinder.id(i),AcqManager::calibPath(),1);
-        if(status != VI_SUCCESS) {
-          char message[256];
-          AcqrsD1_errorMessage(acqFinder.id(i),status,message);
-          printf("Acqiris calibration save error: %s\n",message);
-        } else {
-          printf("Calibration saved.\n");
-        }
-      }
-    }
+static void calibrate_module(ViSession id) 
+{
+  ViStatus status = Acqrs_calibrate(id);
+  if(status != VI_SUCCESS) {
+    char message[256];
+    Acqrs_errorMessage(id,status,message,256);
+    printf("Acqiris calibration error: %s\n",message);
   } else {
-    printf("Calibration error: found %d acqiris instruments\n",(int)acqFinder.numInstruments());
+    printf("Acqiris calibration successful.\n");
+    status = Acqrs_calSave(id,AcqManager::calibPath(),1);
+    if(status != VI_SUCCESS) {
+      char message[256];
+      Acqrs_errorMessage(id,status,message,256);
+      printf("Acqiris calibration save error: %s\n",message);
+    } else {
+      printf("Calibration saved.\n");
+    }
   }
+}
+
+static void calibrate() 
+{
+  AcqFinder acqFinder(AcqFinder::MultiInstrumentsOnly);
+
+  printf("Calibrating %d D1 instruments\n",acqFinder.numD1Instruments());
+  for(int i=0; i<acqFinder.numD1Instruments();i++)
+    calibrate_module(acqFinder.D1Id(i));
+
+  printf("Calibrating %d T3 instruments\n",acqFinder.numT3Instruments());
+  for(int i=0; i<acqFinder.numT3Instruments();i++)
+    calibrate_module(acqFinder.T3Id(i));
 }
 
 int main(int argc, char** argv) {
@@ -156,20 +160,20 @@ int main(int argc, char** argv) {
   // parse the command line for our boot parameters
   unsigned detid = -1UL;
   unsigned platform = -1UL;
-  Arp* arp = 0;
+  bool multi_instruments_only = true;
 
   extern char* optarg;
   int c;
-  while ( (c=getopt( argc, argv, "a:i:p:C")) != EOF ) {
+  while ( (c=getopt( argc, argv, "i:p:tC")) != EOF ) {
     switch(c) {
-    case 'a':
-      arp = new Arp(optarg);
-      break;
     case 'i':
       detid  = strtoul(optarg, NULL, 0);
       break;
     case 'p':
       platform = strtoul(optarg, NULL, 0);
+      break;
+    case 't':
+      multi_instruments_only = false;
       break;
     case 'C':
       calibrate();
@@ -184,30 +188,34 @@ int main(int argc, char** argv) {
     return 0;
   }
 
-  // launch the SegmentLevel
-  if (arp) {
-    if (arp->error()) {
-      char message[128];
-      sprintf(message, "failed to create odfArp : %s", 
-	      strerror(arp->error()));
-      printf("%s %s\n",argv[0], message);
-      delete arp;
-      return 0;
-    }
-  }
-
   Node node(Level::Source,platform);
-  DetInfo detInfo(node.pid(), (Pds::DetInfo::Detector)detid, 0, DetInfo::Acqiris, 0);
 
-  CfgClientNfs* cfgService = new CfgClientNfs(detInfo);
-  AcqServer& acqServer = *new AcqServer(detInfo);
+  std::list<AcqServer*>    servers;
+  std::list<AcqD1Manager*> D1Managers;
+  std::list<AcqT3Manager*> T3Managers;
+
+  AcqFinder acqFinder(multi_instruments_only ? 
+		      AcqFinder::MultiInstrumentsOnly :
+		      AcqFinder::All);
+  for(int i=0; i<acqFinder.numD1Instruments();i++) {
+    DetInfo detInfo(node.pid(), (Pds::DetInfo::Detector)detid, 0, DetInfo::Acqiris, i);
+    AcqServer* srv = new AcqServer(detInfo,_acqDataType);
+    servers   .push_back(srv);
+    D1Managers.push_back(new AcqD1Manager(acqFinder.D1Id(i),*srv,*new CfgClientNfs(detInfo)));
+  }
+  for(int i=0; i<acqFinder.numT3Instruments();i++) {
+    DetInfo detInfo(node.pid(), (Pds::DetInfo::Detector)detid, 0, DetInfo::AcqTDC, i);
+    AcqServer* srv = new AcqServer(detInfo,_acqTdcDataType);
+    servers   .push_back(srv);
+    T3Managers.push_back(new AcqT3Manager(acqFinder.T3Id(i),*srv,*new CfgClientNfs(detInfo)));
+  }
+  
   Task* task = new Task(Task::MakeThisATask);
-  MySegWire settings(acqServer);
-  Seg* seg = new Seg(task, platform, *cfgService, settings, arp, acqServer);
-  SegmentLevel* seglevel = new SegmentLevel(platform, settings, *seg, arp);
+  MySegWire settings(servers);
+  Seg* seg = new Seg(task, platform, settings, 0, D1Managers, T3Managers);
+  SegmentLevel* seglevel = new SegmentLevel(platform, settings, *seg, 0);
   seglevel->attach();
 
   task->mainLoop();
-  if (arp) delete arp;
   return 0;
 }
