@@ -1,3 +1,4 @@
+2011-Jan-17 weaver	Tag V02-10-03.  Added configuration GUI panels for Acqiris TDC.
 2010-Dec-06 weaver	Tag V02-10-00.  Added configuration GUI panels for new EVR configuration type (ConfigV5).
 			Added sequencer control to control_gui.
 2010-Nov-02 caf         Tag V02-08-05.
